Fix contrast issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,7 +30,6 @@ main {
 }
 
 p {
-  background-color: var(--background-color);
   margin: 1rem 0;
 }
 
@@ -231,7 +230,6 @@ footer {
 
 #header h1, 
 #header h1 span {
-  background-color: var(--background-color);
   font-family: 'Oswald', sans-serif;
   font-size: 3rem;
 }
@@ -311,7 +309,6 @@ footer {
   }
 
   .contact-link {
-    background-color: var(--background-color);
     margin: 2rem 0 2rem 0;
   }
 
